--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         <div class="work-grid">
             
             <div class="project-card">
-                <img src="https://images.unsplash.com/photo-1549490349-8643362c3e07?q=80&w=2670&auto=format&fit=crop" alt="UI/UX Prototyping" class="project-image">
+                <img src="UI UX.jpg" alt="UI/UX Prototyping" class="project-image">
                 <div class="project-info">
                     <span class="project-cat">UI/UX & Web Design</span>
                     <h3 class="project-title">Responsive Web Interface Mockups</h3>
