--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
             </div>
 
             <div class="project-card">
-                <img src="https://images.unsplash.com/photo-1582213837965-021c33f2b43b?q=80&w=2670&auto=format&fit=crop" alt="Figma Prototyping" class="project-image">
+                <img src="wire.jpg" alt="Figma Prototyping" class="project-image">
                 <div class="project-info">
                     <span class="project-cat">Wireframing & Prototyping</span>
                     <h3 class="project-title">Interactive App Prototypes</h3>
