--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             </div>
 
             <div class="project-card">
-                <img src="https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?q=80&w=2564&auto=format&fit=crop" alt="Video Advertising" class="project-image">
+                <img src="video editim.jpg" alt="Video Advertising" class="project-image">
                 <div class="project-info">
                     <span class="project-cat">Motion & Media Ads</span>
                     <h3 class="project-title">Video Advertising Campaigns</h3>
