--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             </div>
 
             <div class="project-card">
-                <img src="https://images.unsplash.com/photo-1543852786-1cf6624b9987?q=80&w=2670&auto=format&fit=crop" alt="Print Campaign" class="project-image">
+                <img src="graphic-design-in-print-media.png" alt="Print Campaign" class="project-image">
                 <div class="project-info">
                     <span class="project-cat">Graphic Design & Print</span>
                     <h3 class="project-title">High-Resolution Print Media</h3>
