--- a/index.html
+++ b/index.html
@@ -455,6 +455,10 @@
                 <h2 style="font-size: 2rem; border-bottom: none;">Career Summary</h2>
             </div>
             <div class="experience-item">
+                <strong>GRAPHIC DESIGNER at Twenty4 </strong>
+                <span>Coimbatore | May 2025 - Present</span>
+            </div>
+            <div class="experience-item">
                 <strong>GRAPHIC DESIGNER, EASY COPYING</strong>
                 <span>Hoora, Bahrain | Feb 2024 - Feb 2025</span>
             </div>
