--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
         
         <div class="skill-list">
             <div class="skill-item">UI/UX Design</div>
-            <div class="skill-item">nm</div>
-            <div class="skill-item">**Graphic Design**</div>
+    
+            <div class="skill-item">Graphic Design</div>
             <div class="skill-item">Adobe Photoshop</div>
             <div class="skill-item">Adobe Illustrator</div>
             <div class="skill-item">Figma (Prototyping)</div>
