--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 <h2 style="font-size: 2rem; border-bottom: none;">Career Summary</h2>
             </div>
             <div class="experience-item">
-                <strong>GRAPHIC DESIGNER at Twenty4 </strong>
+                <strong>GRAPHIC DESIGNER, Twenty4 </strong>
                 <span>Coimbatore | May 2025 - Present</span>
             </div>
             <div class="experience-item">
