--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
     <header class="hero">
         <div class="hero-content">
             <h1>Visual and Interactive Designer <br> crafting <span class="role-highlight">impactful</span> user experiences.</h1>
-            <p>A Graphic Designer & UI/UX Specialist with **3.5 years of experience** in managing the complete design pipeline—from print media and video to high-fidelity **Figma** prototypes.</p>
+            <p>A Graphic Designer & UI/UX Specialist with 3.5 years of experience in managing the complete design pipeline—from print media and video to high-fidelity Figma prototypes.</p>
             <div>
                 <a href="#work" class="cta-btn">View Featured Projects</a>
             </div>
