--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             </div>
 
             <div class="project-card">
-                <img src="video editim.jpg" alt="Video Advertising" class="project-image">
+                <img src="video editing.jpg" alt="Video Advertising" class="project-image">
                 <div class="project-info">
                     <span class="project-cat">Motion & Media Ads</span>
                     <h3 class="project-title">Video Advertising Campaigns</h3>
