--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                 <div class="project-info">
                     <span class="project-cat">UI/UX & Web Design</span>
                     <h3 class="project-title">Responsive Web Interface Mockups</h3>
-                    <p>Designed responsive websites and high-impact digital posters using **Figma** and **Photoshop**.</p>
+                    <p>Designed responsive websites and high-impact digital posters using Figma & Photoshop.</p>
                 </div>
             </div>
 
@@ -471,7 +471,7 @@
                 <div class="project-info">
                     <span class="project-cat">Motion & Media Ads</span>
                     <h3 class="project-title">Video Advertising Campaigns</h3>
-                    <p>Created engaging **Social Media Videos** and Theatre Ads, mastering workflow in **Premiere Pro**.</p>
+                    <p>Created engaging Social Media Videos & Theatre Ads, mastering workflow in Premiere Pro.</p>
                 </div>
             </div>
 
@@ -480,7 +480,7 @@
                 <div class="project-info">
                     <span class="project-cat">Graphic Design & Print</span>
                     <h3 class="project-title">High-Resolution Print Media</h3>
-                    <p>Managed the design and final preparation of high-quality **Printing Posters** and physical advertisements.</p>
+                    <p>Managed the design and final preparation of high-quality Printing Posters & physical advertisements.</p>
                 </div>
             </div>
 
@@ -489,7 +489,7 @@
                 <div class="project-info">
                     <span class="project-cat">Wireframing & Prototyping</span>
                     <h3 class="project-title">Interactive App Prototypes</h3>
-                    <p>Developed wireframes and high-fidelity interactive app prototypes utilizing the full capabilities of **Figma**.</p>
+                    <p>Developed wireframes and high-fidelity interactive app prototypes utilizing the full capabilities of Figma.</p>
                 </div>
             </div>
         </div>
