--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
             <a href="mailto:nidhishjo555@gmail.com" style="color: var(--accent);">Email: nidhishjo555@gmail.com</a>
             <a href="tel:+919567460883">Mobile: +91 9567460883</a>
             <a href="https://www.behance.net/nidhishjo555" target="_blank">Behance: nidhishjo555</a>
-            <a href="#" target="_blank">LinkedIn (Placeholder)</a>
+            <a href="#" target="https://www.linkedin.com/in/nidhish-m-b474a4185/">LinkedIn</a>
         </div>
         <div class="copyright">
             © 2025 Nidhish Mani.
